--- a/infra/package.json
+++ b/infra/package.json
@@ -11,19 +11,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.36.1",
-    "@types/jest": "^25.2.1",
-    "@types/node": "10.17.5",
-    "jest": "^25.5.0",
-    "ts-jest": "^25.3.1",
-    "aws-cdk": "1.36.1",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "aws-cdk": "2.45.0",
+    "aws-lambda": "^1.0.7",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.36.1",
-    "@aws-cdk/aws-rds": "^1.36.1",
-    "@aws-cdk/core": "1.36.1",
+    "aws-cdk-lib": "2.45.0",
+    "constructs": "^10.0.0",
+    "dotenv": "^16.0.2",
+    "joi": "^17.6.0",
     "source-map-support": "^0.5.16"
   }
 }
