--- a/infra/env/dev.env
+++ b/infra/env/dev.env
@@ -2,5 +2,6 @@ NS="RdsDemo"
 STAGE="Dev"
 VPC_ID=""
 INGRESS_CIDR="127.0.0.1"
-AWS_REGION="ap-northeast-2"
+DATABASE_NAME=""
 AWS_ACCOUNT_ID=""
+AWS_REGION="ap-northeast-2"
